--- a/settings/settings.yaml
+++ b/settings/settings.yaml
@@ -1,4 +1,4 @@
-mode: 'train' # 'eval' 'test' 'finetune'
+mode: 'train' # 'eval' 'test' 'finetune' used to be train
 
 
 wave:
@@ -22,8 +22,8 @@ decoder:
 
 encoder:
   model: 'Cnn10'
-  freeze: No
-  pretrained: Yes
+  freeze: Yes # used to be No
+  pretrained: No # used to be Yes
 
 word_embedding:
   pretrained: No
@@ -31,7 +31,7 @@ word_embedding:
 
 
 data:
-  type: 'clotho'  # 'clotho' 'audiocaps'
+  type: 'audiocaps'  # 'clotho' 'audiocaps'
   input_field_name: 'audio_data'  # 'feature'
   batch_size: 32
   num_workers: 8
@@ -66,7 +66,7 @@ path:
     words_freq: 'audiocaps/pickles/words_freq.p' 
   encoder: 'pretrained_models/encoder/'
   word2vec: 'pretrained_models/word2vec/w2v_all_vocabulary.model'
-  model: 'pretrained_models/models/submission1/best_model.pt'
+  model: 'outputs/exp1/model/best_model.pt'
 
 
 rl:
